--- a/.env
+++ b/.env
@@ -23,10 +23,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=23306
 DB_DATABASE=proyectolaravelservidor
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=pablo
+DB_PASSWORD=pablo
+DB_ROOT_PASSWORD:root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
