--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ DB_PORT=23306
 DB_DATABASE=proyectolaravelservidor
 DB_USERNAME=pablo
 DB_PASSWORD=pablo
-DB_ROOT_PASSWORD:root
+DB_ROOT_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
