--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.6"
+        "@tailwindcss/vite": "^4.0.6",
+        "sweetalert": "^2.1.2"
     }
 }
