--- a/.env
+++ b/.env
@@ -65,3 +65,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=d35f9035d775de
+MAIL_PASSWORD=4043311cc53316
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=pablocasamianquintero@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
